@@ -798,4 +798,41 @@ OPTIONS
             3 - Update counts must be identical.
         ]]></Help>
     </Command>
+    
+    <Command name="\insert" class="org.sqsh.commands.Insert">
+        <Description>Generates INSERT statements from a query</Description>
+           
+        <Help><![CDATA[
+SYNOPSIS
+   \insert [-b batch_size] [-s session_id] table_name
+              
+DESCRIPTION
+   The \insert command executes the current SQL buffer and turns any
+   result sets that are returned by the query into SQL INSERT statements.
+   This is similar to executing the \go command with  its "-i" option, 
+   except that a more fine grained control of how the inserts are processed
+   is available.
+   
+   By default, \insert simply displays the INSERT statement(s) to the 
+   screen, however if the -s flag is provided a connection maintained
+   by a different session may be used to execute the INSERT statements.
+   
+OPTIONS
+   -b batch_size  Specifies the number of rows that should be "batched"
+                  together. If the "-s" option is not used, then this
+                  indicates how often a "go" is displayed to the screen.
+                  If the "-s" option is used, then the specified number of
+                  INSERT statements is executed at once, followed by a 
+                  commit.
+                  
+   -s session_id  Provides a target session id for execution of the 
+                  INSERT statements that are generated.  The provided
+                  session must be connected to a database server to
+                  function.
+
+SEE ALSO
+   \go
+        ]]></Help>
+    </Command>
+    
 </Commands>
