@@ -1,4 +1,7 @@
 Release 1.1-SNAPSHOT
+* Added \insert command, this displays the results of the current SQL
+  query as INSERT statements or executes the INSERT statements in 
+  another session.
 * Added \diff command to compare results from SQL executed across 
   multiple session.
 * Tab completion now recognizes the TSQL "use" statement.
